--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/app": "^0.9.13",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^9.23.0",
+    "firebase-firestore-lite": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0"
